--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
         <div id="tabela-redes-sociais">
             <a href="https://wa.me/+5586999999999">
-                <img class="redes-sociais_logo alt="WhatsApp" src="assets/whatsapp-mono.png">
+                <img class="redes-sociais_logo alt="WhatsApp" src="assets/whatsapp-mono.png" alt="WhatsApp">
                 <p class="rede-sociais_nome">WhatsApp</p>
             </a>
             <a href="">
-                <img alt="Instagram" class="redes-sociais_logo" src="assets/instagram.png">
+                <img alt="Instagram" class="redes-sociais_logo" src="assets/instagram.png" alt="Instagram">
                 <p class="rede-sociais_nome">Instagram</p>
             </a>
             <a href="">
-                <img class="redes-sociais_logo" alt="Email" src="assets/mail.png">
+                <img class="redes-sociais_logo" alt="Email" src="assets/mail.png" alt="Email">
                 <p class="rede-sociais_nome">Email</p>
             </a>
             <a href="https://www.google.com/maps/@-2.9077698,-41.7799714,16.58z">
